kubernetes/core/longhorn/manifests/ingress-platform.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-platform
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-netbird-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.rlservers.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
